added new pdb files, added checks in sbatch scripts for local job

--- a/BUILD_DIR/packmol_config_file.cfg
+++ b/BUILD_DIR/packmol_config_file.cfg
@@ -18,33 +18,114 @@ output mixture.pdb
 
 #
 
-structure model_neuram_tet_x.pdb
+structure 6lu7_chainA.pdb
   number 1
   fixed 0. 0. 0. 0. 0. 0
 end structure
 
-
-structure ZMR_model.pdb
-  number 6
-  inside box -54 -36 -54  54 36 54
+structure 6lu7_chainB.pdb
+  number 1
+  fixed 0. 0. 0. 0. 0. 0
 end structure
 
-structure glu.pdb
-  number 20
-  inside box -54 -36 -54  54 36 54
+structure AminoAcids/ala.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
 end structure
 
-structure glutathione.pdb 
-  number 3
-  inside box -54 -36 -54  54 36 54
+structure AminoAcids/cys.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
 end structure
 
-structure potassium.pdb
-  number 22
-  inside box -54 -36 -54  54 36 54
+structure AminoAcids/asp.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
 end structure
 
-structure magnesium.pdb
-  number 20
-  inside box -54 -36 -54  54 36 54
+structure AminoAcids/glu.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
 end structure
+
+structure AminoAcids/phe.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+#structure AminoAcids/gly.pdb
+#  number 4
+#  inside box -40 -40 -40  40  40 40 
+#end structure
+
+structure AminoAcids/his.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/ile.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/lys.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/leu.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/met.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/asn.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+#structure AminoAcids/pro.pdb
+#  number 4
+#  inside box -40 -40 -40  40  40 40 
+#end structure
+
+structure AminoAcids/gln.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/arg.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/ser.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/thr.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/val.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/trp.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+structure AminoAcids/tyr.pdb
+  number 4
+  inside box -40 -40 -40  40  40 40 
+end structure
+
+
