--- a/Setup_and_Config/sbatch_production_script.template
+++ b/Setup_and_Config/sbatch_production_script.template
@@ -14,6 +14,8 @@
 #SBATCH --tasks-per-node=X
 #SBATCH --gres gpu:X
 
+#SBATCH -A O2D_Account   # use get_protject_codes
+
 production_script=X
 
 module load openmpi
